# seaorm-sample

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: post.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
