[package]
name = "sea-orm-example"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
dotenv = "0.15.0"

[dependencies.sea-orm]
version = "0.11.0"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
default-features = false
